--- a/public/goupilation.html
+++ b/public/goupilation.html
@@ -8,8 +8,8 @@
 	<body onload="initVideoPlayers();">
 		<div>
 			<div id="overlay"></div>
-			<video id="player1"></video>
-			<video id="player2"></video>
+			<video id="player1" preload="auto"></video>
+			<video id="player2" preload="auto"></video>
 		</div>
 	</body>
 </html>
