- Fixed typos in clips.html and clips.css
- Fixed a regression when adding clips to current save
- Created an object for UI elements
- Deleted sclipts/authentication.js

--- a/public/clips.html
+++ b/public/clips.html
@@ -50,7 +50,7 @@
 				<div>
 					<div class="group-label">Goupilation</div>
 					<div class="group goupilation-group">
-						<button id="goupilation-button" class="button goupilation-button" onclick="goupilation()" title="Choos current selection for Goupilation">Select</button>
+						<button id="goupilation-button" class="button goupilation-button" onclick="goupilation()" title="Choose current selection for Goupilation">Select</button>
 					</div>
 				</div>
 			</div>
@@ -64,7 +64,7 @@
 				</div>
 			</div>
 			<div>
-				<button id="toggle-import-export" class="button toggle-button" onclick="showHideImportExport()" title="Import / Export saved clips">&lt;</button>
+				<button id="toggle-import-export" class="button toggle-button" onclick="showHideImportExport()" title="Toggle Clips & Import/Export views">&lt;</button>
 			</div>
 		</div>
 		<div id="clipsList"></div>
