--- a/public/goupilation.html
+++ b/public/goupilation.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link rel="stylesheet" href="css/goupilation.css" />
-		<script type="text/javascript" src="scripts/authentication.js"></script>
-		<script type="text/javascript" src="scripts/goupilation.js"></script>
-	</head>
-	<body onload="initVideoPlayers();">
-		<div>
-			<div id="overlay"></div>
-			<video id="player1" preload="auto"></video>
-			<video id="player2" preload="auto"></video>
-		</div>
-	</body>
+  <head>
+    <link rel="stylesheet" href="css/goupilation.css" />
+    <script
+      type="module"
+      src="scripts/goupilation-events.js"
+    ></script>
+  </head>
+  <body>
+    <div>
+      <div id="overlay"></div>
+      <video id="player1" preload="auto"></video>
+      <video id="player2" preload="auto"></video>
+    </div>
+  </body>
 </html>
