--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <div><a href="clips.html">Clips</a></div>
-    <div><a href="goupilation.html">Goupilation</a></div>
+    <div><a href="video.html">Video</a></div>
   </body>
 </html>
