--- a/public/video.html
+++ b/public/video.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="css/goupilation.css" />
-    <script
-      type="module"
-      src="scripts/goupilation-events.js"
-    ></script>
+    <link rel="stylesheet" href="css/video.css" />
+    <script type="module" src="scripts/video-events.js"></script>
   </head>
   <body>
     <div>
