--- a/public/clips.html
+++ b/public/clips.html
@@ -12,10 +12,7 @@
           <div class="group fetch-group">
             <input type="date" id="start_date" name="start_date" />
             <input type="date" id="end_date" name="end_date" />
-            <button
-              id="submit-dates-button"
-              class="button submit-button"
-            >
+            <button id="submit-dates-button" class="button submit-button">
               Submit
             </button>
           </div>
@@ -23,32 +20,16 @@
         <div>
           <div class="group-label">Select</div>
           <div class="group select-group">
-            <button
-              class="button select-button"
-              id="select-all-button"
-              title="Select all clips"
-            >
+            <button class="button select-button" id="select-all-button" title="Select all clips">
               Select All
             </button>
-            <button
-              class="button select-button"
-              id="unselect-all-button"
-              title="Unselect all clips"
-            >
+            <button class="button select-button" id="unselect-all-button" title="Unselect all clips">
               Unselect All
             </button>
-            <button
-              class="button select-button"
-              id="filter-selected-button"
-              title="Show only selected clips"
-            >
+            <button class="button select-button" id="filter-selected-button" title="Show only selected clips">
               Filter Selected
             </button>
-            <button
-              class="button select-button"
-              id="add-selected-button"
-              title="Add selected clips to saved clips"
-            >
+            <button class="button select-button" id="add-selected-button" title="Add selected clips to current save">
               Add Selected
             </button>
           </div>
@@ -56,11 +37,11 @@
         <div>
           <div class="group-label">Sort</div>
           <div class="group sort-group">
-            <select id="sortOption">
-              <option value="date">Date created</option>
-              <option value="views">View count</option>
+            <select id="sort-options">
+              <option value="created_at">Date created</option>
+              <option value="view_count">View count</option>
               <option value="title">Clip title</option>
-              <option value="creator">Creator name</option>
+              <option value="creator_name">Creator name</option>
             </select>
             <button class="button sort-button" id="sort-button">
               Sort
@@ -70,45 +51,23 @@
         <div>
           <div class="group-label">Save</div>
           <div class="group save-group">
-            <input
-              type="text"
-              name="saveName"
-              list="saveList"
-              placeholder="Select/Enter save name"
-              id="save-input"
-            />
-            <datalist id="saveList"></datalist>
-            <button
-              id="save-button"
-              class="button save-button"
-              title="Save selected clips"
-            >
+            <input id="save-input" type="text" list="save-list" placeholder="Select/Enter save name"/>
+            <datalist id="save-list"></datalist>
+            <button id="save-button" class="button save-button" title="Save selected clips">
               Save
             </button>
-            <button
-              id="load-button"
-              class="button save-button"
-              title="Load saved clips"
-            >
+            <button id="load-button" class="button save-button" title="Load saved clips">
               Load
             </button>
-            <button
-              id="delete-button"
-              class="button save-button"
-              title="Delete saved clips"
-            >
+            <button id="delete-button" class="button save-button" title="Delete saved clips">
               Delete
             </button>
           </div>
         </div>
         <div>
-          <div class="group-label">Goupilation</div>
-          <div class="group goupilation-group">
-            <button
-              id="goupilation-button"
-              class="button goupilation-button"
-              title="Choose current selection for Goupilation"
-            >
+          <div class="group-label">Video</div>
+          <div class="group video-group">
+            <button id="video-button" class="button video-button" title="Choose current selection for video">
               Select
             </button>
           </div>
@@ -118,36 +77,24 @@
         <div id="import-export-group">
           <div class="group-label">Import / Export</div>
           <div class="group group-save">
-            <button
-              id="import-button"
-              class="button save-button"
-              title="Import saved clips"
-            >
+            <button id="import-button" class="button save-button" title="Import saved clips">
               Import
             </button>
-            <button
-              id="export-button"
-              class="button save-button"
-              title="Export saved clips"
-            >
+            <button id="export-button" class="button save-button" title="Export saved clips">
               Export
             </button>
           </div>
         </div>
       </div>
       <div>
-        <button
-          id="toggle-import-export"
-          class="button toggle-button"
-          title="Toggle Clips & Import/Export views"
-        >
+        <button id="toggle-views" class="button toggle-button" title="Toggle Clips & Import/Export views">
           &lt;
         </button>
       </div>
     </div>
-    <div id="clipsList"></div>
-    <div id="importExport">
-      <textarea id="importExportInput"></textarea>
+    <div id="clips-list"></div>
+    <div id="import-export">
+      <textarea id="import-export-input"></textarea>
     </div>
   </body>
 </html>
