--- a/public/clips.html
+++ b/public/clips.html
@@ -4,74 +4,64 @@
     <link rel="stylesheet" href="css/clips.css" />
     <script type="module" src="scripts/clips-events.js"></script>
   </head>
+
   <body>
-    <div class="ribbon">
-      <div id="clips-ribbon" class="ribbon-group">
-        <div>
-          <div class="group-label">Fetch</div>
-          <div class="group fetch-group">
-            <input type="date" id="start_date" name="start_date" />
-            <input type="date" id="end_date" name="end_date" />
-            <button id="submit-dates-button" class="button submit-button">
-              Submit
-            </button>
-          </div>
-        </div>
-        <div>
-          <div class="group-label">Select</div>
-          <div class="group select-group">
-            <button class="button select-button" id="add-selected-button" title="Add selected clips to current save">
-              Add Selected
-            </button>
-          </div>
-        </div>
-        <div>
-          <div class="group-label">Save</div>
-          <div class="group save-group">
-            <input id="save-input" type="text" list="save-list" placeholder="Select/Enter save name"/>
-            <datalist id="save-list"></datalist>
-            <button id="save-button" class="button save-button" title="Save selected clips">
-              Save
-            </button>
-            <button id="load-button" class="button save-button" title="Load saved clips">
-              Load
-            </button>
-            <button id="delete-button" class="button save-button" title="Delete saved clips">
-              Delete
-            </button>
-          </div>
-        </div>
-        <div>
-          <div class="group-label">Video</div>
-          <div class="group video-group">
-            <button id="video-button" class="button video-button" title="Choose current selection for video">
-              Select
-            </button>
-          </div>
-        </div>
+
+    <div id="remote-clips">
+      <div class="info">
+        Fetch clips from Twitch
       </div>
-      <div id="import-export-ribbon" class="ribbon-group">
-        <div id="import-export-group">
-          <div class="group-label">Import / Export</div>
-          <div class="group group-save">
-            <button id="import-button" class="button save-button" title="Import saved clips">
-              Import
-            </button>
-            <button id="export-button" class="button save-button" title="Export saved clips">
-              Export
-            </button>
-          </div>
-        </div>
-      </div>
-      <div>
-        <button id="toggle-views" class="button toggle-button" title="Toggle Clips & Import/Export views">
-          &lt;
+      <div class="ribbon">
+        <input type="date" id="start_date" name="start_date" />
+        <input type="date" id="end_date" name="end_date" />
+        <button id="submit-dates-button" class="button submit-button">
+          Submit
+        </button>
+        <button class="button select-button" id="add-selected-button" title="Add clips to current selection">
+          &gt;
         </button>
       </div>
+      <div id="remote-clips-table"></div>
     </div>
-    <div id="clips-list"></div>
+
+    <div id="local-clips">
+      <div class="info">
+        Manage clips for the video
+      </div>
+      <div class="ribbon">
+        <input id="save-input" type="text" list="save-list" placeholder="Select/Enter save name"/>
+        <datalist id="save-list"></datalist>
+        <button id="save-button" class="button save-button" title="Save selected clips">
+          Save
+        </button>
+        <button id="load-button" class="button save-button" title="Load saved clips">
+          Load
+        </button>
+        <button id="delete-button" class="button save-button" title="Delete saved clips">
+          Delete
+        </button>
+        <button id="import-button" class="button share-button" title="Import saved clips">
+          Import
+        </button>
+        <button id="export-button" class="button share-button" title="Export saved clips">
+          Export
+        </button>
+        <button id="video-button" class="button video-button" title="Choose current selection for the video">
+          Select
+        </button>
+      </div>
+      <div id="local-clips-table"></div>
+    </div>
+
     <div id="import-export">
-      <textarea id="import-export-input"></textarea>
+      <div>
+        <textarea id="import-export-input"></textarea>
+        <div class="ribbon">
+          <button id="import-export-confirm" class="button share-button"></button>
+          <button id="import-export-cancel" class="button">Cancel</button>
+        </div>
+      </div>
     </div>
+
   </body>
 </html>
