--- a/public/video.html
+++ b/public/video.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <link rel="stylesheet" href="css/video.css" />
-    <script type="module" src="scripts/video-events.js"></script>
+    <script type="module" src="scripts/video-loop.js"></script>
   </head>
   <body>
     <div>
-      <div id="overlay"></div>
+      <iframe id="overlay-container" allowtransparency="true" frameborder="0" scrolling="no"></iframe>
       <video id="player1" preload="auto"></video>
       <video id="player2" preload="auto"></video>
     </div>
