Added clips embed in editor + bug fix

--- a/public/clips.html
+++ b/public/clips.html
@@ -15,22 +15,37 @@
       <div class="ribbon">
         <input type="date" id="start_date" name="start_date" />
         <input type="date" id="end_date" name="end_date" />
-        <button id="submit-dates-button" class="button submit-button">
-          Submit
+        <button id="submit-dates-button" class="button submit-button" title="Fetch clips created between the indicated dates">
+          Fetch
         </button>
-        <button id="add-selected-button" class="button select-button" title="Add clips to current selection">
+        <button id="add-selected-button" class="button submit-button" title="Add clips to selection">
+          Add
+        </button>
+        <button id="view-local" class="button switch-button" title="View and manage clip selections">
           &gt;
         </button>
       </div>
-      <div id="remote-clips-table"></div>
+      <div id="remote-clips-table">
+        <span>
+          <p>Use this view to:</p>
+          <ul>
+            <li> <b>[Fetch]</b> clips created between two dates (maximum: 100 clips).
+            <li> <b>[Add]</b> clips to the selection (either a new or an existing selection).
+            <li> <b>[>]</b> Switch to the selections view to manage the latter.
+          </ul>
+        </span>
+      </div>
     </div>
 
     <!-- Local clips -->
     <div id="local-clips">
       <div class="info">
-        Manage clips for the video
+        Manage clip selections
       </div>
       <div class="ribbon">
+        <button id="view-remote" class="button switch-button" title="View available clips">
+          &lt;
+        </button>
         <button id="save-button" class="button save-button" title="Save a video">
           Save
         </button>
@@ -46,8 +61,30 @@
         <button id="export-button" class="button share-button" title="Export all saved videos">
           Export
         </button>
+        <button id="view-video" class="button switch-button" title="View the selected video">
+          &gt;
+        </button>
       </div>
-      <div id="local-clips-table"></div>
+      <div id="local-clips-table">
+        <span>
+          <p>Use this view to:</p>
+          <ul>
+            <li> <b>[Save]</b> selections or <b>[Load]</b> and <b>[Delete]</b> previously saved selections.
+            <li> <b>[Import]</b> or <b>[Export]</b> all the saved selections.
+            <li> <b>[<]</b> Switch to the clips fetching view to add new clips to the selection.
+          </ul>
+          <p>
+            The <b>[Save]</b> dialog box can also be used to <b>[Select]</b> the clips to be played in the <a href="./video.html" target="_blank">video</a>.<br>
+            When a video is selected, a link is provided to share the latter with others.<br>
+            The video can then be viewed by clicking on <b>[>]</b>
+          </p>
+        </span>
+      </div>
+    </div>
+
+    <!-- Viewer -->
+    <div id="viewer">
+      <iframe id="viewer-container" width="533px" height="300px" allowfullscreen="false" frameborder="0" scrolling="no"></iframe>   
     </div>
 
     <!-- Load dialog -->
@@ -71,24 +108,24 @@
       <div class="vertical">
         <div style="display: table">
           <div style="display: table-row">
-            <div style="display:table-cell">Save name:</div>
-            <div style="display:table-cell"><input id="save-name" type="text"></input></div>
+            <div style="display: table-cell">Save name:</div>
+            <div style="display: table-cell"><input id="save-name" type="text"></input></div>
           </div>
           <div style="display: table-row">
             <div style="display: table-cell">Overlay URL:</div>
             <div style="display: table-cell"><input id="save-overlay" type="text" placeholder="(leave empty for default value)"></input></div>
           </div>
           <div style="display: table-row">
-            <div style="display:table-cell">Intro video URL:</div>
-            <div style="display:table-cell"><input id="save-intro" type="text" placeholder="(leave empty for default value)"></input></div>
+            <div style="display: table-cell">Intro video URL:</div>
+            <div style="display: table-cell"><input id="save-intro" type="text" placeholder="(leave empty for default value)"></input></div>
           </div>
           <div style="display: table-row">
-            <div style="display:table-cell">Outro video URL:</div>
-            <div style="display:table-cell"><input id="save-outro" type="text" placeholder="(leave empty for default value)"></input></div>
+            <div style="display: table-cell">Outro video URL:</div>
+            <div style="display: table-cell"><input id="save-outro" type="text" placeholder="(leave empty for default value)"></input></div>
           </div>
           <div style="display: table-row">
-            <div style="display:table-cell">Transition video URL:</div>
-            <div style="display:table-cell"><input id="save-transition" type="text" placeholder="(leave empty for default value)"></input></div>
+            <div style="display: table-cell">Transition video URL:</div>
+            <div style="display: table-cell"><input id="save-transition" type="text" placeholder="(leave empty for default value)"></input></div>
           </div>
         </div>
         <div class="modal-dialog-buttons">
