transition as overlay

--- a/public/video.html
+++ b/public/video.html
@@ -7,8 +7,9 @@
   <body>
     <div>
       <iframe id="overlay-container" allowtransparency="true" frameborder="0" scrolling="no"></iframe>
-      <video id="player1" preload="auto"></video>
-      <video id="player2" preload="auto"></video>
+      <video id="videoPlayer1" preload="auto"></video>
+      <video id="videoPlayer2" preload="auto"></video>
+      <video id="transitionPlayer" preload="auto"></video>
     </div>
   </body>
 </html>
