--- a/public/clips.html
+++ b/public/clips.html
@@ -163,5 +163,29 @@
       </div>
     </div>
 
+    <div id="sign-in-wall" class="modal-dialog small">
+      <div class="vertical">
+        Sign in
+        <input id="sign-in-email" placeholder="you@domain.com" />
+        <input id="sign-in-password" placeholder="password" type="password" />
+        <div class="modal-dialog-buttons">
+          <button id="sign-in-confirm" class="button share-button">OK</button>
+        </div>
+      </div>
+    </div>
+
+    <div style="position: absolute; top: 50px; right: 50px; z-index: 2">
+      <button id="signout-button" class="button submit-button" title="Sign current user out">
+        Sign out
+      </button>
+    </div>
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="/__/firebase/8.1.2/firebase-app.js"></script>
+    <script src="/__/firebase/8.1.2/firebase-auth.js"></script>
+
+    <!-- Initialize Firebase -->
+    <script src="/__/firebase/init.js"></script>
+
   </body>
 </html>
