--- a/public/video.html
+++ b/public/video.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="css/video.css" />
     <script type="module" src="scripts/video-loop.js"></script>
+    <title>Goupilation - Lecture</title>
   </head>
   <body>
     <div>
